platform/keycloak-next/canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-canary
  namespace: keycloak
  labels:
    app.kubernetes.io/name: sso-canary
    app.kubernetes.io/component: auth-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso-canary
  template:
    metadata:
      labels:
        app: sso-canary
    spec:
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: whoami
          image: traefik/whoami:v1.11.0
          ports:
            - { name: http, containerPort: 80 }
          resources:
            requests: { cpu: 10m, memory: 32Mi }
            limits: { cpu: 100m, memory: 64Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: sso-canary
  namespace: keycloak
  labels:
    app.kubernetes.io/name: sso-canary
    app.kubernetes.io/component: auth-canary
spec:
  selector:
    app: sso-canary
  ports:
    - { name: http, port: 80, targetPort: http }
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sso-canary
  namespace: keycloak
  labels:
    app.kubernetes.io/name: sso-canary
    app.kubernetes.io/component: auth-canary
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sso-canary.e-dani.com
    external-dns.alpha.kubernetes.io/target: 57.129.17.172
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-edge
  routes:
    - kind: Rule
      match: Host(`sso-canary.e-dani.com`)
      middlewares:
        - name: sso-chain
          namespace: keycloak
      services:
        - name: sso-canary
          port: 80
  tls:
    store:
      name: default
      namespace: traefik-edge
